Added device type tab.

--- a/ui-new/src/language/json/de.json
+++ b/ui-new/src/language/json/de.json
@@ -9,5 +9,8 @@
   "healthid": "Gesundheit",
   "entertainmentid": "Unterhaltung",
   "statesid": "Zustände",
-  "sign-in": "Login"
+  "sign-in": "Login",
+  "PSS": "Zwischenstecker",
+  "WSC2": "Wandsender",
+  "VRCC": "Heizkörperthermostat"
 }
