Added Smoke detector and window detector

--- a/ui-new/src/language/json/de.json
+++ b/ui-new/src/language/json/de.json
@@ -11,6 +11,9 @@
   "statesid": "Zustände",
   "sign-in": "Login",
   "PSS": "Zwischenstecker",
+  "PSSO": "Zwischenstecker Outdoor",
+  "WDS": "Fensterkontakt",
+  "WSD2": "Rauchmelder",
   "WSC2": "Wandsender",
   "VRCC": "Heizkörperthermostat",
   "1Day": "1 Tag",
